# Solitaire_Solvability

./: Cargo.toml  README.md  compact_solvable_games.json  compact_solvable_games.txt  new  solvable_games.json  test.txt
src/: card.rs  main.rs  moves.rs  solver.rs  tests.rs
