[package]
name = "solitaire_solvability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
rand = "0.4"
colored = "2.0.0"
derivative = "2.2.0"
arrayvec = "0.7.2"
rayon = "1"
mersenne_twister = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"